[tool.poetry]
name = "toyota"
version = "v1.3.0"
description = "Toyota Connected Services integration for Home Assistant"
authors = ["DurgNomis-drol <simongrud@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
homeassistant = "^2023.11"
mytoyota = "0.9.3"
arrow = "^1.1.1"

[tool.poetry.dev-dependencies]
pre-commit = "^3.5.0"
black = "^23.11.0"
ruff = "^0.1.5"

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    "YTT",
    # Isort
    "I001",
    "I002"
]
line-length = 88
fix = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
