[tool.poetry]
name = "toyota"
version = "v1.3.0"
description = "Toyota Connected Services integration for Home Assistant"
authors = ["DurgNomis-drol <simongrud@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
homeassistant = "^2023.11"
mytoyota = "^1.0.0"
arrow = "^1.1.1"

[tool.poetry.dev-dependencies]
pre-commit = "^3.5.0"
ruff = "^0.1.5"
homeassistant-stubs = "^2023.11"
voluptuous-stubs = "^0.1"

[tool.ruff]
select = [
    # Ruff specific
    "RUF",
    # Pylint
    "PL",
    # Pyflakes
    "F",
    # pep8-naming
    "N",
    # Pycodestyle
    "E",
    "W",
    "D",
    # flake8-2020
    "YTT",
    # flake8-async
    "ASYNC",
    # flake8-bugbear
    "B",
    # flake8-unused-arguments
    "ARG",
    # flake8-commas
    "COM",
    # Isort
    "I"
]
extend-ignore = ["PLR2004", "D203", "D213", "COM812"]
line-length = 120
fix = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
