[tool.poetry]
name = "toyota"
version = "v2.0.3"
description = "Toyota Connected Services integration for Home Assistant"
authors = ["DurgNomis-drol <simongrud@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
homeassistant = "^2023.11"
mytoyota = "2.1.1"
arrow = "^1.1.1"

[tool.poetry.dev-dependencies]
homeassistant-stubs = "^2023.11"
voluptuous-stubs = "^0.1"
pre-commit = "^3.5.0"
pre-commit-hooks = "^4.5.0"
ruff = "^0.1.5"
codespell = "^2.0.0"

[tool.ruff]
select = [
    # Ruff specific
    "RUF",
    # Pylint
    "PL",
    # Pyflakes
    "F",
    # pep8-naming
    "N",
    # Pycodestyle
    "E",
    "W",
    "D",
    # flake8-2020
    "YTT",
    # flake8-async
    "ASYNC",
    # flake8-bugbear
    "B",
    # flake8-unused-arguments
    "ARG",
    # flake8-commas
    "COM",
    # Isort
    "I"
]
extend-ignore = ["PLR2004", "D203", "D213", "COM812"]
line-length = 99
fix = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
